<resources>
    <string name="app_name">Exchange</string>
    <string name="lblAmount">Amount</string>
    <string name="lblFromCurrency">From currency</string>
    <string name="rdbCurrencyDollar">Dollar</string>
    <string name="rdbCurrencyEuro">Euro</string>
    <string name="rdbCurrencyPound">Pound</string>
    <string name="lblToCurrency">To currency</string>
    <string name="btnExchange">Exchange</string>
</resources>