<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblAmount">
    </TextView>
    <EditText
        android:id="@+id/txtAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginBottom="@dimen/padding"
        android:text="0"
        android:gravity="right">
    </EditText>
    <TextView
        android:id="@+id/lblFromCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblFromCurrency">
    </TextView>
    <RadioGroup
        android:id="@+id/rdgFromCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rdbFromCurrencyDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdbCurrencyDollar"/>
        <RadioButton
            android:id="@+id/rdbFromCurrencyEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdbCurrencyEuro"/>
        <RadioButton
            android:id="@+id/rdbFromCurrencyPound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdbCurrencyPound"/>
        <ImageView
            android:id="@+id/imgFromCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </RadioGroup>
    <TextView
        android:id="@+id/lblToCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblToCurrency">
    </TextView>
    <RadioGroup
        android:id="@+id/rdgToCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rdbToCurrencyDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdbCurrencyDollar"/>
        <RadioButton
            android:id="@+id/rdbToCurrencyEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdbCurrencyEuro"/>
        <RadioButton
            android:id="@+id/rdbToCurrencyPound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdbCurrencyPound"/>
        <ImageView
            android:id="@+id/imgToCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </RadioGroup>
    <Button
        android:id="@+id/btnExchange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnExchange"
        android:layout_marginTop="@dimen/padding">
    </Button>
</LinearLayout>